Fixing the slideshow issue on firefox

--- a/app/assets/stylesheets/parish_home.scss
+++ b/app/assets/stylesheets/parish_home.scss
@@ -1,12 +1,17 @@
 body#sanderstead_parish {
 	#parish_home {
-		#slideshow { position: relative; z-index: 0 }
-		#slideshow_controls {position: absolute; z-index: 1; width: 100%; top: 290px;}
-		#main_content { 
+		#slideshow {
+      position: relative; z-index: 0;
+      #myCarousel {
+        border: 1px solid;
+      }
+    }
+		#slideshow_controls {position: absolute; z-index: 1; width: 1160px; top: 290px;}
+		#main_content {
 			position: relative;
 			background: url(backgrounds/homepage_content.png) repeat-x;
 			margin-top: -20px;
-			#left { float: left; width: 540px; 
+			#left { float: left; width: 540px;
 				#intro { margin-bottom: 30px; }
 				#churches {
 					.church { margin-bottom: 20px;
@@ -15,18 +20,18 @@ body#sanderstead_parish {
 					}
 				}
 			}
-			
-			#right { 
-				margin-left: 560px; 
+
+			#right {
+				margin-left: 560px;
 				width: 335px;
-				margin-top: -300px; 
+				margin-top: -300px;
 				background: url(backgrounds/homepage_sidebar.png) no-repeat;
 				padding-left: 40px;
 				padding-top: 30px;
 				padding-right: 40px;
 			}
-			
-			#bottom { 
+
+			#bottom {
 				h1 { margin-bottom: 20px; }
 				.feature { float: left; width: 300px; margin-right: 10px;
 					.feature_image { margin-bottom: 20px; }
